# ant_trails

./: CMakeLists.txt  LICENSE  README.md
include/ant_bot/: ant_bot.h  crumb.h
src/: ant_bot.cpp  crumb.cpp
worlds/: ant.world
